# credit_portfolio_model

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: cpm_benchmark.rs
src/: borrower.rs  exposure.rs  lib.rs  main.rs  portfolio.rs  risk_group.rs
