[package]
name = "credit_portfolio_model"
authors = ["zoonders"]
description = "Simulation of factor model to calculate loss distribution of a credit portfolio"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zoonders/credit_portfolio_model"
keywords = ["simulation", "rust"]
categories = ["mathematics", "statistics", "Monte Carlo", "finance"]
readme = "README.md"

[dependencies]
clap = { version = "*", features = ["derive"] }
csv = "*"
serde = { version = "*", features = ["derive"] }
ndarray = "*"
ndarray-linalg = "*"
statrs = "*"
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rayon = "*"
chrono = "*"

[profile.release]
debug = true
