[package]
name = "credit_portfolio_model"
authors = ["zoonders"]
description = "Simulation of factor model to calculate loss distribution of a credit portfolio"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/zoonders/credit_portfolio_model"
keywords = ["simulation", "rust"]
categories = ["mathematics", "finance"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
csv = "1.3.*"
serde = { version = "1.0.*", features = ["derive"] }
ndarray = "0.16.*"
ndarray-linalg = "0.17.*"
statrs = "0.18.*"
rand = "0.8.*"
rand_distr = "0.4.*"
rand_pcg = "0.3.*"
rayon = "1.10.*"
chrono = "0.4.*"

[dev-dependencies]
criterion = "0.3.*"

[[bench]]
name = "cpm_benchmark"
harness = false

[lib]
name = "credit_portfolio_model"
path = "src/lib.rs"

